# test_code

./: .copier-answers.yml  .env  .env.example  .gitattributes  .gitignore  .pdm-python  .pre-commit-config.yaml  .secrets.env  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cis_request.py  cis_worker.py  config.yaml  config_loader.py  copy_item_worker.py  database.py  docker-compose.ssh.yaml  docker-compose.yaml  docker-entrypoint.sh  get_file_from_db.py  indexer.py  instructions.txt  leaflets_kpis.ipynb  make.py  metic_example.csv  mock_worker_test.py  other_proj_config.py  pdm.sh  pyproject.toml  request.py  sample_request.txt  schema.py  secret_config.yaml.tpl  test_integration_worker.py  test_workeridx.py  worker.py  wrapper_worker.py
src/: README.MD
src/index/: controller.py  utils.py
src/worker/: azure_ml_controller.py  blobContainerController.py  config.py  globals.py  message.py  metrics_paths.py  start.py  storage_utils.py  utils.py  worker.py  worker_errors.py
